--- a/ibsen.css
+++ b/ibsen.css
@@ -68,3 +68,17 @@
 .navbar {
     background-color: #333;
     color: white;
+    text-align: center;
+    padding: 10px 0;
+  }
+  
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    margin: 0 20px;
+    font-size: 18px;
+  }
+  
+  .navbar a i {
+    margin-right: 5px;
+  }
